--- a/EUGENE/Lab--6/CMakeLists.txt
+++ b/EUGENE/Lab--6/CMakeLists.txt
@@ -3,4 +3,5 @@ project(Lab__6)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Lab__6 main.cpp)
+add_subdirectory(killer)
+include_directories(killer)
