--- a/EUGENE/Lab--6/killer/CMakeLists.txt
+++ b/EUGENE/Lab--6/killer/CMakeLists.txt
@@ -1,5 +1,6 @@
-add_executable(killer main.cpp killer.h killer.cpp ../user/user.cpp)
-add_library(libkiller
-        STATIC
-        killer.h
-        killer.cpp)
+cmake_minimum_required(VERSION 3.21)
+project(killer)
+
+set(CMAKE_CXX_STANDARD 17)
+
+add_executable(killer main.cpp killer.h killer.cpp)
